--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,24 @@
-akka.actor.deployment {
-  /random-router-pool {
-    router = random-pool
-    nr-of-instances = 3
+akka {
+  actor.deployment {
+    /random-router-pool {
+      router = random-pool
+      nr-of-instances = 3
+    }
+  }
+
+  persistence {
+    journal {
+      plugin = "akka.persistence.journal.leveldb",
+      leveldb {
+        dir = "target/example/journal",
+        native = false
+      }
+    },
+    snapshot-store {
+      plugin = "akka.persistence.snapshot-store.local",
+      local {
+        dir = "target/example/snapshots"
+      }
+    }
   }
 }
