--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,6 +19,12 @@ akka {
       local {
         dir = "target/example/snapshots"
       }
+    },
+    query.journal.leveldb {
+      class = "akka.persistence.query.journal.leveldb.LeveldbReadJournalProvider"
+      write-plugin = ""
+      refresh-interval = 3s
+      max-buffer-size = 100
     }
   }
 }
